#20 Fix input width on mobile devices

--- a/src/components/AutocompleteAnimated/AutocompleteAnimated.css
+++ b/src/components/AutocompleteAnimated/AutocompleteAnimated.css
@@ -13,3 +13,9 @@
 .input:active, .input:focus {
 	outline: none;
 }
+
+@media (max-width: 680px) {
+	.input {
+		width: 90%;
+	}
+}
